--- a/tekton/PiplineResource.yaml
+++ b/tekton/PiplineResource.yaml
@@ -1,11 +1,11 @@
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
 metadata:
-  name: skaffold-git
+  name: pod-puller-git
 spec:
   type: git
   params:
     - name: revision
       value: master
     - name: url
-      value: https://github.com/GoogleContainerTools/skaffold
+      value: https://github.com/popcor255/git-pod-puller
