--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^8.2.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "shortid": "^2.2.15"
   }
 }
