--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
     "dotenv": "^8.2.0",
+    "fetch-mock": "^8.3.1",
+    "jest": "^24.9.0",
+    "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "shortid": "^2.2.15"
+  },
+  "devDependencies": {
+    "ts-jest": "^24.3.0"
   }
 }
